--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes sociais:</h2>
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/rodrigues.z">
                     <img src="./assets/icones/instagram.png" alt="Logo do Instagram">
                     Instagram
                 </a>
